--- a/flaskr/test.ipynb
+++ b/flaskr/test.ipynb
@@ -7,10 +7,11 @@
    "outputs": [],
    "source": [
     "from flaskr import create_app\n",
-    "from flaskr.models import db\n",
+    "from flaskr.models import db, User\n",
     "\n",
     "app = create_app()\n",
     "with app.app_context():\n",
+    "    db.create_all()\n",
     "    "
    ]
   }
