--- a/flaskr/test.ipynb
+++ b/flaskr/test.ipynb
@@ -14,11 +14,36 @@
     "    db.create_all()\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with app.app_context():\n",
+    "    quynt = User.query.first()\n",
+    "    resume_1 = Resume(name='resume_1', user=quynt)\n",
+    "    resume_2 = Resume(name='resume_2', user=quynt)\n",
+    "    db.session.commit()\n",
+    "\n",
+    "with app.app_context():\n",
+    "    db.session.execute(select(Resume.name, Resume.id).join(User).where(User.username=='quynt')).all()"
+   ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "9fcc2c2d82ac0a8c211b32836461dd9804a7379233cdde1a83ef10d8885ff31d"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.8.10 ('venv_sqlalchemy_tutorial': venv)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.8.10"
   },
   "orig_nbformat": 4
  },
