--- a/flaskr/test.ipynb
+++ b/flaskr/test.ipynb
@@ -7,27 +7,16 @@
    "outputs": [],
    "source": [
     "from flaskr import create_app\n",
-    "from flaskr.models import db, User\n",
+    "from flaskr.models import *\n",
+    "from sqlalchemy import select\n",
+    "\n",
     "\n",
     "app = create_app()\n",
-    "with app.app_context():\n",
-    "    db.create_all()\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "with app.app_context():\n",
     "    quynt = User.query.first()\n",
     "    resume_1 = Resume(name='resume_1', user=quynt)\n",
     "    resume_2 = Resume(name='resume_2', user=quynt)\n",
     "    db.session.commit()\n",
-    "\n",
-    "with app.app_context():\n",
     "    db.session.execute(select(Resume.name, Resume.id).join(User).where(User.username=='quynt')).all()"
    ]
   }
