add sqlalchemy signals

--- a/flaskr/test.ipynb
+++ b/flaskr/test.ipynb
@@ -19,6 +19,28 @@
     "    db.session.commit()\n",
     "    db.session.execute(select(Resume.name, Resume.id).join(User).where(User.username=='quynt')).all()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Or you can you"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from flaskr import create_app\n",
+    "from flaskr.models import *\n",
+    "from sqlalchemy import select\n",
+    "\n",
+    "\n",
+    "app = create_app()\n",
+    "app.app_context().push()"
+   ]
   }
  ],
  "metadata": {
